--- a/public/font-icons/icons.css
+++ b/public/font-icons/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?tg00t2');
-  src:  url('fonts/icomoon.eot?tg00t2#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?tg00t2') format('truetype'),
-    url('fonts/icomoon.woff?tg00t2') format('woff'),
-    url('fonts/icomoon.svg?tg00t2#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?qoo4q4');
+  src:  url('fonts/icomoon.eot?qoo4q4#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?qoo4q4') format('truetype'),
+    url('fonts/icomoon.woff?qoo4q4') format('woff'),
+    url('fonts/icomoon.svg?qoo4q4#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,182 +25,32 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-bullseye1:before {
-  content: "\e94a";
-}
-.icon-line-chart:before {
-  content: "\e94b";
-}
-.icon-bar-chart:before {
-  content: "\e94c";
-}
-.icon-bar-chart-o:before {
-  content: "\e94c";
-}
-.icon-chat:before {
-  content: "\e947";
-}
-.icon-stats:before {
-  content: "\e94d";
-}
-.icon-statistics:before {
-  content: "\e94d";
-}
-.icon-grow:before {
-  content: "\e94d";
-}
-.icon-increase:before {
-  content: "\e94d";
-}
-.icon-up:before {
-  content: "\e94d";
-}
-.icon-magnifier:before {
-  content: "\e930";
-}
-.icon-search2:before {
-  content: "\ea23";
-}
-.icon-settings1:before {
-  content: "\ea24";
-}
-.icon-bulb:before {
-  content: "\ea28";
-}
-.icon-stacked_line_chart:before {
-  content: "\e94e";
-}
-.icon-event_seat:before {
-  content: "\e949";
-}
-.icon-playlist_add:before {
-  content: "\e944";
-}
-.icon-check-circle1:before {
-  content: "\e93b";
-}
-.icon-cloud-lightning:before {
-  content: "\e93c";
-}
-.icon-download-cloud:before {
-  content: "\e959";
-}
-.icon-folder-plus1:before {
-  content: "\e96e";
-}
-.icon-maximize:before {
-  content: "\e995";
-}
-.icon-sun1:before {
-  content: "\e9e3";
-}
-.icon-upload-cloud:before {
-  content: "\e9ff";
-}
-.icon-user1:before {
-  content: "\ea00";
-}
-.icon-user-check1:before {
-  content: "\ea01";
-}
-.icon-user-minus1:before {
-  content: "\ea02";
-}
-.icon-user-plus1:before {
-  content: "\ea03";
-}
-.icon-user-x:before {
-  content: "\ea04";
-}
-.icon-users1:before {
-  content: "\ea05";
-}
-.icon-volume:before {
-  content: "\ea09";
-}
-.icon-volume-1:before {
-  content: "\ea0a";
-}
-.icon-volume-2:before {
-  content: "\ea0b";
-}
-.icon-volume-x:before {
-  content: "\ea0c";
-}
-.icon-list-add:before {
-  content: "\e943";
-}
-.icon-playlist:before {
-  content: "\e940";
-}
-.icon-sand-time:before {
-  content: "\e98c";
-}
-.icon-clock-circle:before {
-  content: "\e989";
-}
-.icon-calendar-check:before {
-  content: "\e98a";
-}
-.icon-bomb:before {
-  content: "\e98b";
-}
-.icon-cog:before {
-  content: "\e987";
-}
-.icon-dashboard-outline:before {
-  content: "\e988";
-}
-.icon-logout:before {
-  content: "\e985";
-}
-.icon-logout-1:before {
-  content: "\e986";
-}
-.icon-magnify-glass:before {
-  content: "\e984";
-}
-.icon-lifebuoy:before {
-  content: "\e983";
-}
-.icon-select-rectangle:before {
-  content: "\e980";
-}
-.icon-select-size:before {
-  content: "\e981";
-}
-.icon-select-01:before {
-  content: "\e982";
-}
-.icon-medal-ribbon-star:before {
-  content: "\e978";
-}
-.icon-sitemap:before {
-  content: "\e979";
-}
-.icon-trees:before {
-  content: "\e97a";
-}
-.icon-lock-keyhole-unlocked:before {
-  content: "\e97b";
-}
-.icon-puzzle-piece:before {
+.icon-phone-call:before {
   content: "\e97c";
 }
-.icon-tag:before {
+.icon-clipboard-text:before {
   content: "\e97d";
 }
-.icon-dollar-coin:before {
+.icon-clipboard-check:before {
   content: "\e97e";
 }
-.icon-user-check:before {
-  content: "\e97f";
+.icon-logout-2:before {
+  content: "\e97b";
 }
-.icon-x:before {
+.icon-menu-alt:before {
+  content: "\e97a";
+}
+.icon-pie-chart:before {
+  content: "\e979";
+}
+.icon-folder-cloud:before {
+  content: "\e976";
+}
+.icon-dashboard-outlined-2:before {
   content: "\e977";
 }
-.icon-youtube-icon:before {
-  content: "\e976";
+.icon-dashboard-outlined:before {
+  content: "\e978";
 }
 .icon-excel-document:before {
   content: "\e975";
@@ -511,9 +361,117 @@
 .icon-eye:before {
   content: "\e910";
 }
+.icon-chat:before {
+  content: "\e947";
+}
+.icon-stats:before {
+  content: "\e94d";
+}
+.icon-statistics:before {
+  content: "\e94d";
+}
+.icon-grow:before {
+  content: "\e94d";
+}
+.icon-increase:before {
+  content: "\e94d";
+}
+.icon-up:before {
+  content: "\e94d";
+}
+.icon-magnifier:before {
+  content: "\e930";
+}
+.icon-search2:before {
+  content: "\ea23";
+}
+.icon-settings1:before {
+  content: "\ea24";
+}
+.icon-bulb:before {
+  content: "\ea28";
+}
+.icon-stacked_line_chart:before {
+  content: "\e94e";
+}
+.icon-event_seat:before {
+  content: "\e949";
+}
+.icon-playlist_add:before {
+  content: "\e944";
+}
+.icon-check-circle1:before {
+  content: "\e93b";
+}
+.icon-cloud-lightning:before {
+  content: "\e93c";
+}
+.icon-download-cloud:before {
+  content: "\e959";
+}
+.icon-folder-plus1:before {
+  content: "\e96e";
+}
+.icon-maximize:before {
+  content: "\e995";
+}
+.icon-sun1:before {
+  content: "\e9e3";
+}
+.icon-upload-cloud:before {
+  content: "\e9ff";
+}
+.icon-user1:before {
+  content: "\ea00";
+}
+.icon-user-check1:before {
+  content: "\ea01";
+}
+.icon-user-minus1:before {
+  content: "\ea02";
+}
+.icon-user-plus1:before {
+  content: "\ea03";
+}
+.icon-user-x:before {
+  content: "\ea04";
+}
+.icon-users1:before {
+  content: "\ea05";
+}
+.icon-volume:before {
+  content: "\ea09";
+}
+.icon-volume-1:before {
+  content: "\ea0a";
+}
+.icon-volume-2:before {
+  content: "\ea0b";
+}
+.icon-volume-x:before {
+  content: "\ea0c";
+}
+.icon-list-add:before {
+  content: "\e943";
+}
+.icon-playlist:before {
+  content: "\e940";
+}
 .icon-magic-wand:before {
   content: "\eae1";
 }
 .icon-soundcloud:before {
   content: "\ec0d";
+}
+.icon-bullseye1:before {
+  content: "\e94a";
+}
+.icon-line-chart:before {
+  content: "\e94b";
+}
+.icon-bar-chart:before {
+  content: "\e94c";
+}
+.icon-bar-chart-o:before {
+  content: "\e94c";
 }
