Core Services Section is Ready...

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -246,3 +246,39 @@ ul {
     );
   }
 }
+
+.c-PJLV-gDQMhN-appearance-default {
+  fill: #00ddb3;
+}
+
+.c-PJLV-ijIslH-css {
+  box-sizing: content-box;
+}
+
+.cls-1 {
+  fill: url(#radial-gradient);
+}
+
+.cls-1,
+.cls-2,
+.cls-3,
+.cls-4,
+.cls-5 {
+  stroke-width: 0px;
+}
+
+.cls-3 {
+  fill: #121183;
+}
+
+.cls-4 {
+  fill: #fff;
+}
+
+.cls-5 {
+  fill: #0062ab;
+}
+
+.burpe-suit {
+  enable-background: new 0 0 44 44;
+}
