Projects Highlight is 50% comnplete

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,5 +1,4 @@
-@import "./styles/utils.scss";
-@import "./styles/floating-nav.scss";
+@forward "./styles/utils.scss";
 
 @tailwind base;
 @tailwind components;
