--- a/public/font-icons/icons.css
+++ b/public/font-icons/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?qoo4q4');
-  src:  url('fonts/icomoon.eot?qoo4q4#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?qoo4q4') format('truetype'),
-    url('fonts/icomoon.woff?qoo4q4') format('woff'),
-    url('fonts/icomoon.svg?qoo4q4#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?lvsvs');
+  src:  url('fonts/icomoon.eot?lvsvs#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?lvsvs') format('truetype'),
+    url('fonts/icomoon.woff?lvsvs') format('woff'),
+    url('fonts/icomoon.svg?lvsvs#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-bolt:before {
+  content: "\e97f";
+}
 .icon-phone-call:before {
   content: "\e97c";
 }
