--- a/public/font-icons/icons.css
+++ b/public/font-icons/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?lvsvs');
-  src:  url('fonts/icomoon.eot?lvsvs#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?lvsvs') format('truetype'),
-    url('fonts/icomoon.woff?lvsvs') format('woff'),
-    url('fonts/icomoon.svg?lvsvs#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?on1ldg');
+  src:  url('fonts/icomoon.eot?on1ldg#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?on1ldg') format('truetype'),
+    url('fonts/icomoon.woff?on1ldg') format('woff'),
+    url('fonts/icomoon.svg?on1ldg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-whatsapp:before {
+  content: "\e980";
+}
 .icon-bolt:before {
   content: "\e97f";
 }
