--- a/app/styles/animated-link.scss
+++ b/app/styles/animated-link.scss
@@ -15,8 +15,9 @@
     color: inherit;
     opacity: 0;
     transform: translate3d(0, 150%, 0);
-    transition: transform 0.6s cubic-bezier(0.23, 1, 0.32, 1),
-    opacity 0.3s ease-in-out;
+    transition:
+      transform 0.6s cubic-bezier(0.23, 1, 0.32, 1),
+      opacity 0.3s ease-in-out;
     will-change: transform, opacity;
   }
 
